@@ -1,0 +1,2 @@
+gimple_assign <modify_expr, a, 12.3>
+
