@@ -1,0 +1,39 @@
+# Copyright (C) 2012 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with GCC; see the file COPYING3.  If not see
+# <http://www.gnu.org/licenses/>.
+
+# gimple testsuite that uses the `dg.exp' driver.
+
+# Load support procs.
+load_lib gimple-dg.exp
+
+# If a testcase doesn't have special options, use these.
+global DEFAULT_GIMPLEFLAGS
+if ![info exists DEFAULT_GIMPLEFLAGS] then {
+    set DEFAULT_GIMPLEFLAGS ""
+}
+
+# Initialize `dg'.
+dg-init
+
+# Gather a list of all tests, with the exception of those in directories
+# that are handled specially.
+set tests [lsort [find $srcdir/$subdir *.gimple]]
+
+# Main loop.
+gimple-dg-runtest $tests $DEFAULT_GIMPLEFLAGS
+
+# All done.
+dg-finish
